--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.2.2",
+    "@mantine/form": "^7.3.0",
     "@mantine/hooks": "^7.2.2",
     "@tabler/icons-react": "^2.42.0",
     "@tauri-apps/api": "^2.0.0-alpha.11",
