--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.2.2",
     "@mantine/form": "^7.3.0",
     "@mantine/hooks": "^7.2.2",
+    "@mantine/notifications": "^7.3.2",
     "@tabler/icons-react": "^2.42.0",
     "@tauri-apps/api": "^2.0.0-alpha.11",
     "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
