--- a/package.json
+++ b/package.json
@@ -11,32 +11,34 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@mantine/core": "^7.2.2",
-    "@mantine/form": "^7.3.0",
-    "@mantine/hooks": "^7.2.2",
+    "@mantine/core": "^7.3.2",
+    "@mantine/form": "^7.3.2",
+    "@mantine/hooks": "^7.3.2",
     "@mantine/notifications": "^7.3.2",
-    "@tabler/icons-react": "^2.42.0",
-    "@tauri-apps/api": "^2.0.0-alpha.11",
-    "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tabler/icons-react": "^2.44.0",
+    "@tauri-apps/api": "2.0.0-alpha.12",
+    "@tauri-apps/plugin-shell": "2.0.0-alpha.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-alpha.17",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@tauri-apps/cli": "2.0.0-alpha.18",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "husky": "^8.0.3",
     "internal-ip": "^7.0.0",
-    "lint-staged": "^15.1.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.11.0",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.11.1",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+    "typescript": "^5.3.3",
+    "vite": "^4.5.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
