--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
     "@mantine/notifications": "^7.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@tabler/icons-react": "^2.44.0",
-    "@tauri-apps/api": "2.0.0-alpha.12",
-    "@tauri-apps/plugin-shell": "2.0.0-alpha.3",
+    "@tauri-apps/api": "1.5.2",
+    "@tauri-apps/plugin-fs": "2.0.0-alpha.4",
+    "@tauri-apps/plugin-shell": "2.0.0-alpha.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-alpha.18",
+    "@tauri-apps/cli": "1.5.8",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "husky": "^8.0.3",
-    "internal-ip": "^7.0.0",
+    "internal-ip": "^8.0.0",
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "^1.11.1",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "3.1.0",
+    "prettier": "3.1.1",
     "typescript": "^5.3.3",
-    "vite": "^4.5.1"
+    "vite": "^5.0.9"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
