--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2.0.0-alpha", features = [] }
 tauri = { version = "2.0.0-alpha", features = [] }
 tauri-plugin-window = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
+tauri-plugin-fs = "2.0.0-alpha"
 serde_json = "1.0"
 
 [features]
