--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tabler/icons-react": "^2.44.0",
     "@tauri-apps/api": "1.5.2",
+    "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.4",
     "@tauri-apps/plugin-fs": "2.0.0-alpha.4",
     "@tauri-apps/plugin-shell": "2.0.0-alpha.4",
     "react": "^18.2.0",
