--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri = { version = "2.0.0-alpha", features = [] }
 tauri-plugin-window = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
 tauri-plugin-fs = "2.0.0-alpha"
+tauri-plugin-clipboard-manager = "2.0.0-alpha"
 serde_json = "1.0"
 
 [features]
