--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "1.5.8",
