--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mantine/notifications": "^7.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@tabler/icons-react": "^2.44.0",
-    "@tauri-apps/api": "1.5.2",
+    "@tauri-apps/api": "^2.0.0-alpha.12",
     "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.4",
     "@tauri-apps/plugin-fs": "2.0.0-alpha.4",
     "@tauri-apps/plugin-shell": "2.0.0-alpha.4",
