--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^2.44.0",
     "@tauri-apps/api": "^2.0.0-alpha.12",
     "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.4",
+    "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
     "@tauri-apps/plugin-fs": "2.0.0-alpha.4",
     "@tauri-apps/plugin-shell": "2.0.0-alpha.4",
     "react": "^18.2.0",
