--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri-plugin-window = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
 tauri-plugin-fs = "2.0.0-alpha"
 tauri-plugin-clipboard-manager = "2.0.0-alpha"
+tauri-plugin-dialog = "2.0.0-alpha"
 serde_json = "1.0"
 
 [features]
