--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
     "@tauri-apps/plugin-fs": "2.0.0-alpha.4",
     "@tauri-apps/plugin-shell": "2.0.0-alpha.4",
+    "@xterm/addon-fit": "0.9.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
