--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/notifications": "^7.3.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@tabler/icons-react": "^2.44.0",
+    "@tanstack/react-virtual": "^3.0.1",
     "@tauri-apps/api": "^2.0.0-alpha.12",
     "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.4",
     "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
