--- a/package.json
+++ b/package.json
@@ -12,41 +12,41 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
-    "@mantine/core": "^7.5.0",
-    "@mantine/form": "^7.5.0",
-    "@mantine/hooks": "^7.5.0",
-    "@mantine/notifications": "^7.5.0",
-    "@reduxjs/toolkit": "^2.1.0",
-    "@tabler/icons-react": "^2.46.0",
-    "@tanstack/react-virtual": "^3.0.2",
+    "@mantine/core": "^7.5.2",
+    "@mantine/form": "^7.5.2",
+    "@mantine/hooks": "^7.5.2",
+    "@mantine/notifications": "^7.5.2",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tabler/icons-react": "^2.47.0",
+    "@tanstack/react-virtual": "^3.0.4",
     "@tauri-apps/api": "2.0.0-alpha.14",
-    "@tauri-apps/plugin-clipboard-manager": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-dialog": "2.0.0-alpha.5",
-    "@tauri-apps/plugin-fs": "2.0.0-alpha.6",
-    "@tauri-apps/plugin-shell": "2.0.0-alpha.5",
+    "@tauri-apps/plugin-clipboard-manager": "2.0.0-beta.0",
+    "@tauri-apps/plugin-dialog": "2.0.0-beta.0",
+    "@tauri-apps/plugin-fs": "2.0.0-beta.0",
+    "@tauri-apps/plugin-shell": "2.0.0-beta.0",
     "@xterm/addon-fit": "0.9.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "tweetnacl": "^1.0.3",
     "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "1.5.9",
-    "@types/node": "^20.11.10",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "husky": "^9.0.7",
+    "husky": "^9.0.11",
     "internal-ip": "^8.0.0",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.33",
-    "postcss-preset-mantine": "^1.12.3",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "3.2.4",
+    "prettier": "3.2.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.1.2"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
