--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-virtual": "^3.0.4",
-    "@tauri-apps/api": "2.0.0-alpha.14",
+    "@tauri-apps/api": "2.0.0-beta.0",
     "@tauri-apps/plugin-clipboard-manager": "2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.0",
     "@tauri-apps/plugin-fs": "2.0.0-beta.0",
@@ -33,7 +33,7 @@
     "xterm": "^5.3.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "1.5.9",
+    "@tauri-apps/cli": "2.0.0-beta.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
