--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,15 +14,15 @@ name = "nekops_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-alpha", features = [] }
+tauri-build = { version = "2.0.0-beta.1", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-alpha", features = [] }
-tauri-plugin-window = "2.0.0-alpha"
-tauri-plugin-shell = "2.0.0-alpha"
-tauri-plugin-fs = "2.0.0-alpha"
-tauri-plugin-clipboard-manager = "2.0.0-alpha"
-tauri-plugin-dialog = "2.0.0-alpha"
+tauri = { version = "2.0.0-beta.2", features = [] }
+tauri-plugin-window = "2.0.0-alpha.2"
+tauri-plugin-shell = "2.0.0-beta.0"
+tauri-plugin-fs = "2.0.0-beta.0"
+tauri-plugin-clipboard-manager = "2.0.0-beta.0"
+tauri-plugin-dialog = "2.0.0-beta.0"
 serde_json = "1.0"
 
 [features]
