--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "2.0.0-beta.1", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-beta.2", features = [] }
-tauri-plugin-window = "2.0.0-alpha.2"
+# tauri-plugin-window = "2.0.0-alpha.2"
 tauri-plugin-shell = "2.0.0-beta.0"
 tauri-plugin-fs = "2.0.0-beta.0"
 tauri-plugin-clipboard-manager = "2.0.0-beta.0"
