--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-fs = "2.0.0-beta.5"
 tauri-plugin-clipboard-manager = "2.1.0-beta.1"
 tauri-plugin-dialog = "2.0.0-beta.5"
+tauri-plugin-single-instance = "2.0.0-beta.6"
+serde = "1.0"
 serde_json = "1.0"
 
 [features]
