--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@tauri-apps/plugin-shell": "2.0.0-beta.8",
     "@xterm/addon-fit": "0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-simple-code-editor": "^0.14.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "2.0.0-beta.13",
     "@types/node": "^20.14.11",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
