--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ tauri-plugin-shell = "2.0.0-beta.9"
 tauri-plugin-fs = "2.0.0-beta.11"
 tauri-plugin-clipboard-manager = "2.1.0-beta.6"
 tauri-plugin-dialog = "2.0.0-beta.11"
-tauri-plugin-single-instance = "2.0.0-beta.11"
+# tauri-plugin-single-instance = "2.0.0-beta.11"
 serde = "1.0"
 serde_json = "1.0"
 
