--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ tauri-plugin-dialog = "2.0.0-beta.11"
 # tauri-plugin-single-instance = "2.0.0-beta.11"
 serde = "1.0"
 serde_json = "1.0"
+enigo = "0.2.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
